--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server application, that can be used for registering students and companies for placements",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
